--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
 <meta charset="utf-8">
 <title>Vicious Cycles</title>
 <!--Add favicon here -->
-<link rel="stylesheet" type="text/css" href="style.css">
+<!--<link rel="stylesheet" type="text/css" href="css/style.css">-->
+<style>
+    body{
+        background-color: #e7fbfb;
+    }
+
+    header{
+        font-size: 4em;
+        align-content: center;
+        color: #010b5b;
+    }
+</style>
 </head>
 
 
@@ -20,9 +31,9 @@
 
 </nav>
 
-<Main>
-
-</Main>
+<body>
+    <img >
+</body>
 
 <Footer>Vicious Cycles: 123 Main St, Anywhere, NC 27000: Phone: (919)-123-4567 Fax: (919) 123-9875 
     Follow us on Twitter and Facebook!!</Footer>
